# mcgeeinfov2

./: .gitignore  CLAUDE.md  README.md  flake.nix  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: build.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: main.py
apps/api/src/api/routers/: jobs.py  modelfit.py  poker.py  resume.py
apps/web/: index.html  package.json  vite.config.js
apps/web/src/: App.jsx  api.js  content.js  index.css
apps/web/src/apps/modelfit/: Graph.jsx  ModelFitApp.jsx  ModelPanel.jsx  ScoreReveal.jsx  SubmitModal.jsx  Tutorial.jsx  api.js  useFitSession.js
apps/web/src/components/: BrandIcons.jsx  CardPicker.jsx  Contact.jsx  PlayingCard.jsx  ProfileWidget.jsx  ProjectCard.jsx  Projects.jsx  Sidebar.jsx  WebAppCard.jsx
apps/web/src/lib/: aiPrompt.js  beep.js  scheduleParser.js
apps/web/src/pages/: About.jsx  JobQueue.jsx  Jobs.jsx  PokerTable.jsx  Portfolio.jsx  Resume.jsx  ResumeEdit.jsx  SessionTimer.jsx
src/: App.jsx
src/components/: About.jsx  Hero.jsx  Nav.jsx
