[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "poker",
    "resume",
    "jobs",
    "modelfit",
]

[tool.uv.sources]
poker     = { workspace = true }
resume    = { workspace = true }
jobs      = { workspace = true }
modelfit  = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
